traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:31: error: ';' expected but 'else' found.
  else {return false}
  ^